WTForms Changelog
=================


Version 0.6.4dev
----------------
Not yet released

- Output HTML5 compact syntax by default.

- Substantial code reorg, cleanup, and test improvements

- Added ext.csrf for a way to implement CSRF protection

- ext.sqlalchemy:
  * Support PGInet, MACADDR, and UUID field conversion
  * Support callable defaults

- Add localization support for WTForms built-in messages


Version 0.6.3
-------------
Released April 24, 2011

- Documentation: Substantial documentation improvements, including adding
  Crash Course as a sphinx document.

- ext.django: QuerySetSelectField (and ModelSelectField) now accept get_label
  similar to sqlalchemy equivalents.

- ext.appengine:
 * model_form fixes: FloatField(#50), TimeField, DateTimeField(#55)
 * ReferencePropertyField: now properly stores model object, not key. (#48)


Version 0.6.2
-------------
Released January 22, 2011

- Bug Fixes:
 * ext.appengine: various field fixes (#34, #48), model_form changes (#41)
 * Fix issue in Optional with non-string input.
 * Make numeric fields more consistent.

- Tests: Improve test coverage substantially.

Version 0.6.1
-------------
Released September 17th, 2010

- Bug Fixes:
  * ext.appengine ReferencePropertyField (#36, #37)
  * dateutil fields: render issue (r419), and consistency issue (#35)
  * Optional validator failed when raw_data was absent (r418)

- Documentation: docs now mention HTML escaping functionality (#38)

- Add preliminary support for providing a translations object that can
  translate built-in validation and coercion errors (#32)


Version 0.6
-----------
Released April 25th, 2010.

- Widgets:
  * HTML is now marked as safe (using __html__) so that compatible templating
    engines will not auto-escape it.

- Fields:
  * Field._default is now Field.default.
  * All fields now have a `raw_data` property.
  * Fields which are select fields (including those in .ext) can be